Set 1GB upload cap and expose evidences to admin-facing interface.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.password=
 # JPA/Hibernate Settings
 # By default, Spring Boot uses 'create-drop' for embedded databases, which wipes data on shutdown.
 # Setting this to 'update' tells Hibernate to update the schema if the entity models change,
-# which preserves the data between application restarts.
+# which preserves the.data between application restarts.
 spring.jpa.hibernate.ddl-auto=update
 
 # Application Settings
@@ -27,6 +27,10 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 server.port=9090
+
+# File Upload Settings
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
 
 # Import local-specific properties
 spring.config.import=optional:application-dev.properties
