--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,11 +20,11 @@ spring.datasource.password=
 # Setting this to 'update' tells Hibernate to update the schema if the entity models change,
 # which preserves the.data between application restarts.
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
 
 # Application Settings
 spring.application.name=voiz
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 server.port=9090
 
