--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ spring.jpa.show-sql=true
 server.port=9090
 
 # File Upload Settings
-spring.servlet.multipart.max-file-size=1GB
-spring.servlet.multipart.max-request-size=1GB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # Import local-specific properties
 spring.config.import=optional:application-dev.properties
