--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # ===================================================================
-# H2 DATABASE CONFIGURATION
+# APPLICATION CONFIGURATION
 # ===================================================================
 
-# H2 Console Settings
+# H2 CONSOLE SETTINGS
 # Enable the H2 database console, accessible at /h2-console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# DataSource Settings for File-based H2 Database
+# DATASOURCE SETTINGS FOR FILE-BASED H2 DATABASE
 # The URL specifies that the database should be stored in a file.
 # The path './data/voizdb' means it will create a 'data' folder in your project's root
 # and a database file named 'voizdb.mv.db' inside it.
@@ -15,22 +15,22 @@ spring.datasource.url=jdbc:h2:file:./data/voizdb
 spring.datasource.username=sa
 spring.datasource.password=
 
-# JPA/Hibernate Settings
+# JPA/HIBERNATE SETTINGS
 # By default, Spring Boot uses 'create-drop' for embedded databases, which wipes data on shutdown.
 # Setting this to 'update' tells Hibernate to update the schema if the entity models change,
 # which preserves the.data between application restarts.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 
-# Application Settings
+# PROJECT-SPECIFIC SETTINGS
 spring.application.name=voiz
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 server.port=9090
 
-# File Upload Settings
+# FILE UPLOAD SETTINGS
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Import local-specific properties
+# IMPORT LOCAL-SPECIFIC SETTINGS
 spring.config.import=optional:application-dev.properties
