🎨 Change remaining old references in the code.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.h2.console.path=/h2-console
 
 # DATASOURCE SETTINGS FOR FILE-BASED H2 DATABASE
 # The URL specifies that the database should be stored in a file.
-# The path './data/voizdb' means it will create a 'data' folder in your project's root
-# and a database file named 'voizdb.mv.db' inside it.
-spring.datasource.url=jdbc:h2:file:./data/voizdb
+# The path './data/safepointdb' means it will create a 'data' folder in your project's root
+# and a database file named 'safepointdb.mv.db' inside it.
+spring.datasource.url=jdbc:h2:file:./data/safepointdb
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -23,7 +23,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 
 # PROJECT-SPECIFIC SETTINGS
-spring.application.name=voiz
+spring.application.name=safepoint
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 server.port=9090
