--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,5 +32,7 @@ server.port=9090
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# IMPORT LOCAL-SPECIFIC SETTINGS
-spring.config.import=optional:application-dev.properties
+# IMPORT SETTINGS
+spring.config.import=\
+    classpath:mime-types.properties,\
+    classpath:application-dev.properties
