Separated database settings.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,8 @@
 # APPLICATION CONFIGURATION
 # ===================================================================
 
-# H2 CONSOLE SETTINGS
-# Enable the H2 database console, accessible at /h2-console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# DATASOURCE SETTINGS FOR FILE-BASED H2 DATABASE
-# The URL specifies that the database should be stored in a file.
-# The path './data/safepointdb' means it will create a 'data' folder in your project's root
-# and a database file named 'safepointdb.mv.db' inside it.
-spring.datasource.url=jdbc:h2:file:./data/safepointdb
-spring.datasource.username=sa
-spring.datasource.password=
+# DEVELOPMENT SETTINGS
+spring.config.import=classpath:application-dev.properties
 
 # JPA/HIBERNATE SETTINGS
 # By default, Spring Boot uses 'create-drop' for embedded databases, which wipes data on shutdown.
@@ -32,7 +22,5 @@ server.port=9090
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# IMPORT SETTINGS
-spring.config.import=\
-    classpath:mime-types.properties,\
-    classpath:application-dev.properties
+# MIME-SPECIFIC SETTINGS
+spring.config.import=classpath:mime-types.properties
