Fix property import in application properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,15 @@ spring.servlet.multipart.max-request-size=10MB
 
 # MIME-SPECIFIC SETTINGS
 spring.config.import=classpath:mime-types.properties
+
+# SERVER SETTINGS
+server.tomcat.trust-forwarded=true
+
+# ESSENTIAL PROXY CONFIGURATION
+server.forward-headers-strategy=framework
+server.tomcat.internal-proxies=127\\.0\\.0\\.1|localhost|::1
+server.tomcat.host-header=host
+
+# DEBUG LOGGING
+logging.level.org.apache.coyote.http11=DEBUG
+logging.level.org.springframework.web=DEBUG
