--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@
 # APPLICATION CONFIGURATION
 # ===================================================================
 
-# DEVELOPMENT SETTINGS
-spring.config.import=classpath:application-dev.properties
+# IMPORT EXTERNAL SETTINGS
+spring.config.import=\
+	classpath:datasource.properties,\
+	classpath:mime-types.properties,\
+	classpath:app-secrets.properties
 
 # JPA/HIBERNATE SETTINGS
 # By default, Spring Boot uses 'create-drop' for embedded databases, which wipes data on shutdown.
@@ -21,9 +24,6 @@ server.port=9090
 # FILE UPLOAD SETTINGS
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
-# MIME-SPECIFIC SETTINGS
-spring.config.import=classpath:mime-types.properties
 
 # SERVER SETTINGS
 server.tomcat.trust-forwarded=true
