--- a/src/main/resources/mime-types.properties
+++ b/src/main/resources/mime-types.properties
@@ -1,3 +1,7 @@
+# ===================================================================
+# MIMETYPE CONFIGURATION
+# ===================================================================
+
 # Allowed MIME Types for file uploads
 mime-types.allowed[0]=image/jpeg
 mime-types.allowed[1]=image/png
