refactor(nav): move config to separate properties and work on student nav support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@
 spring.config.import=\
 	classpath:datasource.properties,\
 	classpath:mime-types.properties,\
-	classpath:app-secrets.properties
+	classpath:app-secrets.properties,\
+	classpath:navigation.properties
 
 # JPA/HIBERNATE SETTINGS
 # By default, Spring Boot uses 'create-drop' for embedded databases, which wipes data on shutdown.
@@ -32,17 +33,3 @@ server.tomcat.trust-forwarded=true
 server.forward-headers-strategy=framework
 server.tomcat.internal-proxies=127\\.0\\.0\\.1|localhost|::1
 server.tomcat.host-header=host
-
-# NAVIGATION CONFIGURATION
-navigation.admin[0].name=Home
-navigation.admin[0].route=/admin/dashboard
-navigation.admin[0].icon=bi bi-house-door-fill
-navigation.admin[1].name=Reports
-navigation.admin[1].route=/admin/reports
-navigation.admin[1].icon=bi bi-file-earmark-text-fill
-navigation.admin[2].name=Schedules
-navigation.admin[2].route=/admin/appointments
-navigation.admin[2].icon=bi bi-calendar2-check-fill
-navigation.admin[3].name=About
-navigation.admin[3].route=/admin/about
-navigation.admin[3].icon=bi bi-info-circle-fill
