--- a/src/main/resources/navigation.properties
+++ b/src/main/resources/navigation.properties
@@ -3,10 +3,10 @@ navigation.admin[0].name=Home
 navigation.admin[0].route=/admin/dashboard
 navigation.admin[0].icon=bi bi-house-door-fill
 navigation.admin[1].name=Reports
-navigation.admin[1].route=/admin/reports
+navigation.admin[1].route=/admin/report
 navigation.admin[1].icon=bi bi-file-earmark-text-fill
 navigation.admin[2].name=Schedules
-navigation.admin[2].route=/admin/appointments
+navigation.admin[2].route=/admin/appointment
 navigation.admin[2].icon=bi bi-calendar2-check-fill
 navigation.admin[3].name=About
 navigation.admin[3].route=/admin/about
