--- a/src/main/resources/navigation.properties
+++ b/src/main/resources/navigation.properties
@@ -8,9 +8,12 @@ navigation.admin[1].icon=bi bi-file-earmark-text-fill
 navigation.admin[2].name=Schedules
 navigation.admin[2].route=/admin/appointment
 navigation.admin[2].icon=bi bi-calendar2-check-fill
-navigation.admin[3].name=About
-navigation.admin[3].route=/admin/about
-navigation.admin[3].icon=bi bi-info-circle-fill
+navigation.admin[3].name=Generate Report
+navigation.admin[3].route=/admin/reports/generate
+navigation.admin[3].icon=bi bi-file-earmark-bar-graph-fill
+navigation.admin[4].name=About
+navigation.admin[4].route=/admin/about
+navigation.admin[4].icon=bi bi-info-circle-fill
 
 navigation.student[0].name=Home
 navigation.student[0].route=/
