feat: enhance report generation interface with improved layout and consistent styling

--- a/src/main/resources/navigation.properties
+++ b/src/main/resources/navigation.properties
@@ -8,7 +8,7 @@ navigation.admin[1].icon=bi bi-file-earmark-text-fill
 navigation.admin[2].name=Schedules
 navigation.admin[2].route=/admin/appointment
 navigation.admin[2].icon=bi bi-calendar2-check-fill
-navigation.admin[3].name=Generate Report
+navigation.admin[3].name=Generate
 navigation.admin[3].route=/admin/reports/generate
 navigation.admin[3].icon=bi bi-file-earmark-bar-graph-fill
 navigation.admin[4].name=About
